Fixing the cards to scale better and stretch.

--- a/partials/debt/debt.sass
+++ b/partials/debt/debt.sass
@@ -11,7 +11,8 @@
 
 .debt__item
   +card
-  margin-bottom: $pad
+  margin: 0 $pad $pad $pad
+  flex-grow: 1
 
 .debt__input
   margin: $pad/2 0
